--- a/Python_Portfolio_Project.ipynb
+++ b/Python_Portfolio_Project.ipynb
@@ -1896,8 +1896,8 @@
     }
    ],
    "source": [
-    "# It seems that the 30-year period examined here there were five drops in gross revenue for the film industry,\n",
-    "# namely in the years 1991,1998,2006,2011 and 2014. Nevertheless, in 1986 the gross revenue was $2.6 billion ,\n",
+    "# It seems that for the 30-year period examined here there were five drops in gross revenue for the film industry,\n",
+    "# namely in the years 1991,1998,2006,2011 and 2014. Nevertheless, in 1986 the gross revenue was $2.6 billion,\n",
     "# whereas in 2016 almost $9 billion.\n",
     "\n",
     "# We would now like to check the hypothesis that there is a positive correlation between\n",
